--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
   "plugins": ["react"],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
-    "react/react-in-jsx-scope": "off"
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/restrict-plus-operands": "off"
   }
 }
